# propaga

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-crates.yml  release.yml
benchmarks/: all_different_only.fzn  bool_reify.fzn  bounded_sum.fzn  bounded_sum_ge.fzn  cumulative.fzn  cumulative_demand.fzn  disjunctive_edge.fzn  disjunctive_three.fzn  disjunctive_two.fzn  gcc_exact.fzn  int_search_order.fzn  int_search_restart.fzn  magic_square.fzn  maximize_x.fzn  minimize_cost.fzn  ordered_chain.fzn  permutation_sum.fzn  reified_eq.fzn  reified_lin_eq.fzn  reified_lin_le.fzn  reified_lin_ne.fzn  reified_lt.fzn  reified_ne.fzn  run.sh  schedule_cumulative.json  schedule_cumulative_cap2.json  schedule_cumulative_demand.json  schedule_cumulative_mode.json  schedule_disjunctive.json  schedule_three_tasks.json  strict_chain.fzn  table_puzzle.fzn  weighted_sum.fzn  weighted_sum_ge.fzn
benchmarks/minizinc/: COMPATIBILITY.md  README.md
crates/propaga-cli/: Cargo.toml
crates/propaga-cli/src/: flatzinc.rs  main.rs  n_queens.rs  output.rs  puzzle_io.rs  schedule.rs  sudoku.rs
crates/propaga-core/: Cargo.toml
crates/propaga-core/src/: context.rs  domain.rs  error.rs  id.rs  lib.rs  nogood.rs  propagator.rs  reason.rs  status.rs
crates/propaga-domains/: Cargo.toml
crates/propaga-domains/src/: bitset.rs  float.rs  hybrid.rs  interval.rs  lib.rs  set.rs
crates/propaga-engine/: Cargo.toml
crates/propaga-engine/src/: context.rs  engine.rs  event_queue.rs  lib.rs  trail.rs
crates/propaga-flatzinc/: Cargo.toml
crates/propaga-flatzinc/src/: compile.rs  error.rs  lib.rs  parse.rs
crates/propaga-flatzinc/tests/: integration.rs
crates/propaga-model/: Cargo.toml
crates/propaga-model/src/: lib.rs  model.rs
crates/propaga-model/tests/: integration.rs
crates/propaga-propagators/: Cargo.toml
crates/propaga-propagators/benches/: propagation.rs
crates/propaga-propagators/src/: all_different.rs  circuit.rs  cumulative.rs  diffn.rs  disjunctive.rs  element.rs  equality.rs  gcc.rs  inverse.rs  less_equal.rs  less_than.rs  lib.rs  linear_eq.rs  linear_scalar.rs  matching.rs  nogood.rs  not_equal_offset.rs  reified.rs  scheduling.rs  table.rs
crates/propaga-search/: Cargo.toml
crates/propaga-search/src/: config.rs  conflict.rs  dfs.rs  lcg.rs  lexicographic.rs  lib.rs  optimize.rs  portfolio.rs  stats.rs
crates/propaga-wasm/: Cargo.toml
crates/propaga-wasm/demo/: index.html
crates/propaga-wasm/src/: lib.rs
examples/: flatzinc_solve.rs  model_sudoku.rs  n_queens.rs  sudoku.rs
scripts/: install-git-hooks.sh  publish-crates.sh
