[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
slotmap = "1.0"
thiserror = "2.0"
priority-queue = "2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
propaga-core = { path = "crates/propaga-core" }
propaga-domains = { path = "crates/propaga-domains" }
propaga-engine = { path = "crates/propaga-engine" }
propaga-propagators = { path = "crates/propaga-propagators" }
propaga-search = { path = "crates/propaga-search" }
propaga-model = { path = "crates/propaga-model" }
propaga-flatzinc = { path = "crates/propaga-flatzinc" }
propaga-cli = { path = "crates/propaga-cli" }
