[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["hocestnonsatis <anil.oz@icloud.com>"]
repository = "https://github.com/hocestnonsatis/propaga"
homepage = "https://github.com/hocestnonsatis/propaga"
documentation = "https://docs.rs/propaga-core"
readme = "README.md"
keywords = ["constraint-programming", "solver", "propagation", "flatzinc", "cp"]
categories = ["algorithms", "science"]
rust-version = "1.85"

[workspace.dependencies]
slotmap = "1.0"
thiserror = "2.0"
priority-queue = "2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
propaga-core = { path = "crates/propaga-core", version = "0.1.0" }
propaga-domains = { path = "crates/propaga-domains", version = "0.1.0" }
propaga-engine = { path = "crates/propaga-engine", version = "0.1.0" }
propaga-propagators = { path = "crates/propaga-propagators", version = "0.1.0" }
propaga-search = { path = "crates/propaga-search", version = "0.1.0" }
propaga-model = { path = "crates/propaga-model", version = "0.1.0" }
propaga-flatzinc = { path = "crates/propaga-flatzinc", version = "0.1.0" }
propaga-cli = { path = "crates/propaga-cli", version = "0.1.0" }
