[package]
name = "propaga-core"
description = "Core types and traits for the Propaga constraint solver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
slotmap.workspace = true
thiserror.workspace = true
