[package]
name = "propaga-flatzinc"
description = "FlatZinc subset parser and compiler for Propaga"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
propaga-core.workspace = true
propaga-model.workspace = true
propaga-propagators.workspace = true
propaga-search.workspace = true
thiserror.workspace = true

[[example]]
name = "flatzinc_solve"
path = "../../examples/flatzinc_solve.rs"
